mdt_cli/tests/snapshots/snapshots__validation_errors_ignore_flag.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmp7UE45Q
    - "--ignore-unclosed-blocks"
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Check failed.
  stale consumers: 1

Stale consumers:
  block `valid_block` at valid.md:3:1

1 consumer block(s) are out of date. Run `mdt update`.
